--- a/about.qmd
+++ b/about.qmd
@@ -6,14 +6,10 @@ about:
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+      href: https://twitter.com/ecologician
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/rdinnager
 ---
 
-About this blog
+Welcome to Pulling Threads, a blog about how to make the most of the R packages `phyf` and `fibre`. Together these R packages help you perform phylogenetic comparative analysis with a fast and flexible modelling framework. I (the developer: Russell Dinnage) post tutorials here periodically, so keep checking back!
